# levenberg-marquardt

./: Cargo.toml  README.md  build.rs  katex-header.html
.github/workflows/: ci.yml  lints.yml  no-std.yml  rust.yml  tests.yml  unit-test.yml
ensure_no_std/: Cargo.toml
src/: equation.rs  lib.rs  lm.rs  problem.rs  problem_ad.rs  qr.rs  trust_region.rs  utils.rs
src/lm/: test_examples.py  test_examples.rs  test_examples_gen.rs  test_helpers.rs  test_init_step.rs  test_update_diag.rs
src/utils/: finite_difference.rs
tests/: basic.rs  line_fitting.rs  line_fitting_ad.rs
