[package]
name = "levenberg-marquardt"
version = "0.8.0"
authors = ["Jannik Schürg <schuerg@ins.uni-bonn.de>", "Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"
description = "Levenberg-Marquardt algorithm built on top of nalgebra"
keywords = ["optimization", "optimizer", "levenberg", "marquardt", "squares"]
categories = ["algorithms", "computer-vision", "science::robotics", "no-std", "mathematics"]
repository = "https://github.com/rust-cv/levenberg-marquardt"
documentation = "https://docs.rs/levenberg-marquardt/"
license = "MIT"
readme = "README.md"

[features]
default = []
minpack-compat = []

[dependencies]
nalgebra = { version = "0.27.1", default-features = false }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }
cfg-if = "1.0.0"

[dev-dependencies]
arrsac = "0.7.0"
rand = { version = "0.8.4", default-features = false }
nalgebra = "0.27.1"
pcg_rand = "0.13.0"
sample-consensus = "1.0.1"
approx = "0.5.0"

[build-dependencies]
rustc_version = "0.3.3"

[profile.test]
# The line fitting test case needs this to run in reasonable amount of time
opt-level = 2

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
