[package]
name = "levenberg-marquardt"
version = "0.14.0"
authors = [
    "Jannik Schürg <schuerg@ins.uni-bonn.de>",
    "Geordon Worley <vadixidav@gmail.com>",
]
edition = "2021"
description = "Levenberg-Marquardt algorithm built on top of nalgebra"
keywords = ["optimization", "optimizer", "levenberg", "marquardt", "squares"]
categories = [
    "algorithms",
    "computer-vision",
    "science::robotics",
    "no-std",
    "mathematics",
]
repository = "https://github.com/rust-cv/levenberg-marquardt"
documentation = "https://docs.rs/levenberg-marquardt/"
license = "MIT"
readme = "README.md"

[features]
default = []
minpack-compat = []

[dependencies]
nalgebra = { version = "0.34", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
cfg-if = "1.0.1"

[dev-dependencies]
arrsac = "0.11.0"
rand = { version = "0.9.2", default-features = false }
rand_chacha = "0.9.0"
nalgebra = "0.34"
sample-consensus = "1.0.2"
approx = "0.5.1"

[build-dependencies]
rustc_version = "0.4.1"

[profile.test]
# The line fitting test case needs this to run in reasonable amount of time
opt-level = 2

[package.metadata.docs.rs]
# To build locally use
#   RUSTDOCFLAGS="--html-in-header katex-header.html" cargo doc --no-deps --document-private-items --open
rustdoc-args = ["--html-in-header", "katex-header.html"]
